fixed scrollbar issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,13 +14,15 @@
 }
 
 #root {
-	width: 100vw;
-	height: 100vh;
-	max-width: 100%;
-	max-height: 100%;
+	width: 100%;
+	height: 100%;
 	font-family: 'Computer Modern', 'Georgia', 'Times New Roman', serif;
 	text-rendering: optimizeLegibility !important;
 	-webkit-font-smoothing: antialiased !important;
+}
+
+html {
+	scrollbar-gutter: stable both-edges;
 }
 
 /* fonts */
